[package]
name = "block_server"
version = "0.1.4"
edition = "2024"
description = "block server"
license = "MIT"
repository ="https://github.com/keithyin/block_server"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = {version = "1", features = ["derive"]}
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"