[package]
name = "block_server"
version = "0.6.1"
edition = "2024"
description = "block server"
license = "MIT"
repository = "https://github.com/keithyin/block_server"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tracing = "0.1"

tracing-subscriber = { version = "0.3.18", features = [
    "json",
    "env-filter",
    "fmt",
    "time",
    "local-time",
] }

tracing-appender = "0.2"
affinity = "0.1"
clap = { version = "4", features = ["derive"] }
num_cpus = "1"
turso = "0.3"
rumqttc = "0.25.1"
time = "0.3.34"
chrono = "0.4"
bytes = "1"
